# AI2MCP

./: .gitignore  CONTEXT_DUMP.txt  MasterPlan.md  README.md  VISION_INTEGRATION_PLAN.md  pyproject.toml
experiments/: agent_benchmark.json  benchmark_remote_model.json  benchmark_with_trained_model.json  simulate_action_test.json  synthetic_baseline.json
experiments/ablation_depth/: ablation_results.json
experiments/aloha_training/: training_history.json
experiments/comparison/: comparison_results.json
experiments/comparison_aloha/: comparison_results.json
experiments/comparison_final_real/: comparison_results.json
experiments/forward_dynamics/: training_history.json
experiments/forward_dynamics_test/: training_history.json
experiments/multimodal_aloha/: training_history.json
experiments/multimodal_training/: training_history.json
scripts/: ablation_depth_noise.py  benchmark_agents.py  compare_models.py  demo_lerobot_pipeline.py  demo_mcp_client.py  generate_comparison_figures.py  generate_forward_dynamics_figure.py  generate_spatiotemporal_figures.py  generate_thesis_figures.py  remote_train.sh  run_experiment.py  start_bridge.sh  test_forward_dynamics.py  test_mcp_connection.py  test_qwen_agent.py  test_simulate_action.py  test_spatiotemporal_gnn.py  train_forward_model.py  train_multimodal_gnn.py  train_relational_gnn.py  train_spatiotemporal_gnn.py
tests/: __init__.py  conftest.py  test_agent_swap.py  test_graph_builder.py  test_lerobot_pipeline.py  test_mcp_tools.py  test_multimodal_gnn.py  test_vision_pipeline.py
thesis/: main.tex  references.bib
(+61 files in other folders)
